# iron-tests

./: .gitignore  Makefile  README.md  tests.tex
doc/: iron_node_numbers.txt  zinc_node_numbers.txt
examples/: collect_results.sh  create_figures.sh  run_examples.sh
examples/example-0001/: run_example.sh
examples/example-0001-u/: .gitignore  run_example.sh
examples/example-0001-u/doc/: example.tex
examples/example-0001/doc/: example.tex
examples/example-0002/doc/: example.tex
examples/example-0003/: CMakeLists.txt  run_example.sh
examples/example-0003/doc/: example.tex
examples/example-0003/results/: compare_solutions.py  vis.com
examples/example-0004/: run_example.sh
examples/example-0004/doc/: example.tex
examples/example-0005/: run_example.sh
examples/example-0005/doc/: example.tex
examples/example-0011/: Makefile  run_example.sh
examples/example-0011/doc/: example.tex
examples/example-0012/: run_example.sh
examples/example-0012/doc/: example.tex
examples/example-0013/: run_example.sh
examples/example-0101/: run_example.sh
examples/example-0102/: Makefile  run_example.sh
examples/example-0111/: Makefile  run_example.sh
examples/example-0112/: run_example.sh
examples/example-0201-u/: run_example.sh
examples/example-0201-u_mod/src/iron/: CMakeLists.txt  example.F90  example_2D_Benjamin.F90
examples/example-0204-u/: run_example.sh
examples/example-0302-u/: run_example.sh
examples/example-0401/: run_example.sh
examples/example-0402/: .gitignore  CMakeLists.txt  run_example.sh
examples/example-0404-c/: run_example.sh
(+371 files in other folders)
